[tool.poetry]
name = "usb2snes"
version = "0.1.0"
description = "A python wrapper for usb2snes"
authors = ["Finn M. <finnjavier08@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^12.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
